--- a/week13.html
+++ b/week13.html
@@ -10,10 +10,10 @@
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fuller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>VJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -39,25 +39,25 @@
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McFarland</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Roethlisberger</td><td></td><td align=right>0</td></tr>
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Luton</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -67,13 +67,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -111,7 +111,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
